--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 
 <head>
 
-    <title>Moon</title>
+    <title>🌝Moon小姐姐最好看</title>
     <meta name="language" content="zh-CN">
-    <meta name="title" content="你最好看">
+    <meta name="title" content="🌝Moon小姐姐最好看">
     <link rel="icon" type="image/x-icon" href="https://cdn.jsdelivr.net/gh/sun0225SUN/photos/img/20210715233345.png">
     <style>
         body {
@@ -31,7 +31,7 @@
         }
     </style>
     <title>
-        放烟花
+        🌝Moon小姐姐最好看
     </title>
     <link href="modal.css" rel="stylesheet" />
 </head>
@@ -45,7 +45,7 @@
             <div class="text_wrapper">
                 <img src="a8.png" alt="">
                 <div class="text">
-                    Moon小姐姐~你感不感觉自己超级无敌好看讨人喜欢~？
+                    嘿！🌝Moon小姐姐~你感不感觉自己超级无敌好看讨人喜欢~？
                 </div>
             </div>
         </div>
@@ -66,7 +66,7 @@
     <img src="moon.png" alt="" id="moon" style="visibility: hidden;" />
     <div style="display:none">
         <div class="shape">
-            Moon小姐姐
+            🌝Moon小姐姐
         </div>
         <div class="shape">
             你好漂亮
